--- a/recitation/iptw-R-and-SAS-recitation.Rmd
+++ b/recitation/iptw-R-and-SAS-recitation.Rmd
@@ -31,8 +31,9 @@ require(foreign)
 library(boot)
 library(geepack)
 library(ggplot2)
-library(foreach)
+library(foreach) 
 library(tableone)
+library(survey)
 set.seed(101) # set seed so you get same results each time you run. Note: no seed in original Gcomp.R program.
 ```
 
@@ -201,6 +202,8 @@ ggplot(data=ns,aes(x=ps,group=factor(newcox2), fill=factor(newcox2)))+
 
 ## Explore Table 1
 
+Note that there are differences between treatment groups when comparing statistics for selected covariates. The treated group is older, uses more tobacco, and has a higher proportion reporting arthritis.
+
 ### SAS
 
 ```{r s-part3-extra, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
@@ -243,18 +246,6 @@ proc means data=a.ps_data mean;
 run;
 ```
 
-Unweighted regression, crude
-```{r s-part4b, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
-libname a "c:\temp";
-
-/* unweighted regression, crude */
-
-proc genmod data=a.ps_data desc;
-	model bleed=newcox2 / dist=bin link=identity;
-run; quit;
-
-```
-
 ### R
 
 ```{r r-part4}
@@ -275,9 +266,18 @@ row.names(ret)<-covs
 colnames(ret)<-c("Old NSAIDS","Cox-2 Sel NSAIDs")
 round(ret,2)
 
-# Unweighted regression, crude
-summary(glm(bleed~newcox2,data=ns))
+```
 
+**Note** that the weighted distribution of the covariates is now similar to the entire population.
+
+Distribution of the covariates for the entire sample:
+
+```{r r-part4a, echo=FALSE}
+CreateTableOne(vars=c("male", "arthrtis", "contsteroids",
+                            "contanticoag", "contaspirin", "tobacco_imp",
+                            "raceblkoth", "age"),
+                     data = ns,
+                     test=F)
 ```
 
 ## SMR weighted table 1
@@ -297,6 +297,52 @@ proc means data=a.ps_data mean;
 run;
 ```
 
+### R
+```{r r-part5}
+my.smrw <- svydesign(id=~patcode, data = ns, weight = ~smrw)
+names(ns)
+t.1.smrw = svyCreateTableOne(vars=c("male", "arthrtis", "contsteroids",
+                            "contanticoag", "contaspirin", "tobacco_imp",
+                            "raceblkoth", "age"),
+                     strata = c("newcox2"),
+                     data=my.smrw,
+                     test=F)
+print(t.1.smrw)#, #nonnormal=c("contanticoag"))
+```
+
+**Note** that the weighted distribution of the covariates is now similar to the treated sample.
+
+Distribution of the covariates for the treated sample:
+
+```{r r-part5a, echo=FALSE}
+CreateTableOne(vars=c("male", "arthrtis", "contsteroids",
+                            "contanticoag", "contaspirin", "tobacco_imp",
+                            "raceblkoth", "age"),
+                     data = ns[ns$newcox2==1,],
+                     test=F)
+```
+
+## Unweighted regression, crude
+
+### SAS
+
+```{r s-part5b, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+libname a "c:\temp";
+
+/* unweighted regression, crude */
+
+proc genmod data=a.ps_data desc;
+	model bleed=newcox2 / dist=binomial link=identity;
+run; quit;
+```
+
+### R
+
+```{r 4-part5b}
+# Unweighted regression, crude
+coef(summary(glm(bleed~newcox2, family=gaussian(link="identity"), data=ns)))
+coef(summary(glm(bleed~newcox2, family=binomial(link="identity"), data=ns)))
+```
 
 ## Estimate causal risk difference in the population using IPT-weighted linear regression
 
@@ -314,12 +360,22 @@ proc genmod data=a.ps_data desc;
 	repeated subject=patcode / corr=ind;
 	weight iptw;
 run;
+
+/* Note you get same results regardless of distribution. */
+ods select GEEEmpPEst geemodinfo;
+proc genmod data=a.ps_data desc;
+	class patcode;
+	model bleed=newcox2 /dist=normal link=identity;
+	repeated subject=patcode / corr=ind;
+	weight iptw;
+run;
 ```
 
 ### R
 ```{r r-part6}
 # IPT weighted, use GEE for SE
-summary(geeglm(bleed~newcox2,family=gaussian, weight=iptw, id=patcode, data=ns))
+coef(summary(geeglm(bleed~newcox2, family=gaussian, weight=iptw, id=patcode, data=ns)))
+coef(summary(geeglm(bleed~newcox2, family=binomial(link="identity"), weight=iptw, id=patcode, data=ns))) # note that you get same results
 ```
 
 
@@ -347,6 +403,37 @@ run;
 ```{r r-part7}
 
 # SMR weighted, use GEE for SE
-summary(geeglm(bleed~newcox2, family=gaussian, weight=smrw, id=patcode, data=ns))
+coef(summary(geeglm(bleed~newcox2, family=gaussian, weight=smrw, id=patcode, data=ns)))
+coef(summary(geeglm(bleed~newcox2, family=binomial(link = "identity"), weight=smrw, id=patcode, data=ns)))
 
 ```
+
+## Appendix: Normal approximation to the binomial distribution.
+
+Bleed is a binomially distribution variable with $bleed \sim bin(n,p)$ and $p = Pr(X=k) = \dbinom{n}{k} p^k (1-p)^{n-k}$. 
+
+The count of X bleeds in a group of $n$ observations with a probability of $p$ follows an approximately normal distribution for large values of n courtesy of the Central Limit Theorem, with $\hat{p} \textrm{ approximately } \sim N\left(p, \displaystyle\frac{p(1-p)}{n}\right)$.
+
+<!--* $n$: the number of people in the sample with a treatment (newcox2=1) = `r length(ns[ns$newcox2==1,"newcox2"])`.-->
+
+* $p$, the proportion with bleeding (see table below). 
+    * $\hat p_{treatment}$ = 11.7 when weighted by SMRW
+    * $\hat p_{no treatment}$ = 15.1 when weighted by SMRW
+    * $\hat p_{treatment} - \hat p_{no treatment}$ = 15.1 - 11.7 = 3.4
+
+See [this link](http://www.stat.yale.edu/Courses/1997-98/101/binom.htm) for info on Normal approximation of Binomial distribution.
+
+### R
+
+Proportion of bleeding in sample by treatment status (newcox2)
+
+```{r r-app1}
+
+app.smrw = svyCreateTableOne(vars=c("bleed"),
+                     strata = c("newcox2"),
+                     factorVars = c("bleed"),
+                     data=my.smrw,
+                     test=F)
+print(app.smrw)
+```
+
