--- a/lectures/L04-iptw/iptw-example.Rmd
+++ b/lectures/L04-iptw/iptw-example.Rmd
@@ -2,6 +2,8 @@
 title: "EPID 722. IPTW estimation applied in NAMCS NSAID data. Alan Brookhart"
 author: "EPID 722 2016"
 date: "January 26, 2016"
+csl: ../../american-journal-of-epidemiology.csl
+bibliography: ../../bib1.bib
 output: html_document
 ---
 
@@ -65,7 +67,7 @@ mean(pbleed.0)
 mean(pbleed.1)-mean(pbleed.0)
 ```
 
-If you were to do a trial you would reduce the risk of bleeding by `r 100*abs(mean(pbleed.1)-mean(pbleed.0))` percent.
+If you conducted a randomized trial in this context you would expect `r round(100*abs(mean(pbleed.1)-mean(pbleed.0)),3)` fewer cases of bleeding per 100 people in the treated group (newcox2=1) compared to the untreated group (assuming all relavant conditions hold true, including "positivity, well-defined exposures, correctly specified models, and no unmeasured confounding or selection bias" [@buchanan_worth_2014]).
 
 # What is E[Y(1)]/E[Y(0)], the true causal risk ratio?
 ```{r}
@@ -149,7 +151,7 @@ summary(m.unwt)
 coef.unwt = coef(m.unwt)
 ```
 
-In unweighted model, the coefficient for the treatment in the model, `r coef.unwt[length(coef.unwt)]` suggests that risk of bleeding is increased by 2 percent.
+In unweighted model, the coefficient for the treatment in the model, `r coef.unwt[length(coef.unwt)]` suggests that the treated group (newcox2=1) had `r round(coef.unwt[length(coef.unwt)]*100,3)` additional cases of bleeding (bleed=1) per 100 people compared to the untreated group.
 
 # IPT weighted, to get SE correct must bootstrap or use GEE
 ```{r}
@@ -168,3 +170,6 @@ coef.smrw = coef(m.smrw)
 ```
 
 Estimate for effect, `r coef.smrw[2]`, now even larger than the iptw, `r coef.iptw[2]`, because standardized to sicker patients who could benefit more from treatment.
+
+
+## References
