Add required readings to lectures.

--- a/bib1.bib
+++ b/bib1.bib
@@ -28,12 +28,12 @@
   number = {1},
   journaltitle = {Computer Methods and Programs in Biomedicine},
   shortjournal = {Comput. Methods Programs Biomed.},
-  author = {Cole, Stephen R. and HernC!n, Miguel A.},
+  author = {Cole, Stephen R. and Hernan, Miguel A.},
   urldate = {2015-12-16},
   date = {2004-07},
   pages = {45--49},
   keywords = {_tablet},
-  file = {Cole_HernC!n_2004_Adjusted survival curves with inverse probability weights.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\T7JXTSI8\\1-s2.0-S0169260703001378-main.pdf:application/pdf}
+  file = {Cole_Hernan_2004_Adjusted survival curves with inverse probability weights.pdf:C\:\\Users\\vonholle\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\j1fm6qhh.default\\zotero\\storage\\T7JXTSI8\\1-s2.0-S0169260703001378-main.pdf:application/pdf}
 }
 
 @article{cole_bayesian_2012,
