--- a/lectures/L04-iptw/iptw-example.Rmd
+++ b/lectures/L04-iptw/iptw-example.Rmd
@@ -1,10 +1,15 @@
 ---
-title: "EPID 722. IPTW estimation applied in NAMCS NSAID data. Alan Brookhart"
-author: "EPID 722 2016"
+title: "IPTW estimation applied in NAMCS NSAID data"
+author: 'UNC EPID 722: Dr. Alan Brookhart'
 date: "January 26, 2016"
 csl: ../../american-journal-of-epidemiology.csl
 bibliography: ../../bib1.bib
-output: html_document
+output:
+  html_document:
+   toc: true
+   toc_depth: 4 
+   theme: united
+   number_sections: true
 ---
 
 ```{r setup, echo=FALSE}
@@ -172,4 +177,10 @@ coef.smrw = coef(m.smrw)
 Estimate for effect, `r coef.smrw[2]`, now even larger than the iptw, `r coef.iptw[2]`, because standardized to sicker patients who could benefit more from treatment.
 
 
-## References
+
+## Assigned reading
+
+---
+nocite: | 
+  @austin_introduction_2011; @brookhart_confounding_2010; @lunceford_stratification_2004; @rosenbaum_reducing_1984
+...
