--- a/lectures/L07-bayes/bayes.Rmd
+++ b/lectures/L07-bayes/bayes.Rmd
@@ -2,6 +2,8 @@
 title: "Bayes"
 author: "UNC EPID 722: Dr. Steve Cole"
 date: "February 4, 2016"
+csl: ../../american-journal-of-epidemiology.csl
+bibliography: ../../bib1.bib
 output:
   html_document:
    toc: true
@@ -381,3 +383,9 @@ Now you have added in an offset, offset.1 = log(Z) = log(`r Z`) = `r round(offse
 
 This example demonstrates that the offset Z adjusts the intercept of the observed data. In this example a Z>1 moves the intercept in the logisitic regression downward from `r round(coef(glm.0)[1],4)` to `r round(coef(glm.1)[1],4)`
 
+### Assigned reading
+ 
+---
+nocite: | 
+  @cole_bayesian_2012
+...
