--- a/lectures/L12-missing/missing.Rmd
+++ b/lectures/L12-missing/missing.Rmd
@@ -44,6 +44,7 @@ output:
   require(stargazer)
   library(betareg) 
   library(rms)
+  require(optimx) 
   set.seed(123) # set seed so you get same results each time you run.
 ```
 
@@ -88,6 +89,7 @@ libname mle "c:\temp";
 %let dir = c:\temp;
 data a; set mle.a; run;
 
+* Full data adjusted Cox model (we wish we had the full data);
 proc phreg data=a;
 	model t*delta(0)=idu white age cd4/rl ties=efron;
 	ods select modelinfo censoredsummary fitstatistics parameterestimates;
@@ -103,7 +105,7 @@ s.1 = coxph(Surv(t, delta) ~ idu + white + age + cd4, data=a.dat, ties = "efron"
 summary(s.1)
 ```
 
-## Make some data MAR (you can skip this data step at first)
+## Make some data MAR, you can (and perhaps should) skip this data step at first
 
 
 ### SAS
@@ -113,7 +115,7 @@ libname mle "c:\temp";
 %let dir = c:\temp;
 data a; set mle.a; run;
 
-*Make some data MAR, you can skip this data step at first;
+*Make some data MAR, you can (and perhaps should) skip this data step at first;
 data mle.b; 
 	set a;
 	call streaminit(1); *initiaize a reproducable pseudorandom number stream;
@@ -165,6 +167,8 @@ expit = function(x) { 1/(1+exp(-x)) } # transform x, log(odds) to p = prob
 	int4 = -log(1/ep4-1)
 ```
 
+
+### R, annotation
 
 Set-up for missing data:
 
@@ -263,8 +267,8 @@ b.dat = within(b.dat, {
 b.dat$complete = ifelse(complete.cases(b.dat),1,0)
 table(b.dat$complete)
 ```
-  
-## Look at data, now with missingness
+
+## Look at observed data, now with missingness (this is what we usually get)
 
 ### SAS
 
@@ -273,7 +277,7 @@ libname mle "c:\temp";
 %let dir = c:\temp;
 data b; set mle.b; run;
 
-*Look at data, now with missingness;
+*Look at observed data, now with missingness (this is what we usually get);
 proc means data=b n nmiss mean sum min max; 
 	var delta t drop idu white age cd4 complete;
 	title "Time from 12/6/95 to AIDS or death in WIHS";
@@ -346,7 +350,7 @@ libname mle "c:\temp";
 %let dir = c:\temp;
 data b; set mle.b; run;
 
-*MI;
+*MI, assuming multivariate normality (MVN);
 proc mi data=b seed=3 nimpute=100 out=c;
 	var white age cd4 delta idu;
 	mcmc; *default is chain=single nbiter=200 niter=100 prior=Jeffreys initial=EM;
@@ -389,7 +393,7 @@ round(mipply(imputations, mean, to.matrix = TRUE), 3) # want the values to be th
 var.list = c("t", "idu", "white", "age", "cd4", "delta", "drop")
 
 imp.b.dat = mice(b.dat[, var.list], m=10, maxit=10,
-                 diagnostics=T, seed=50) # note: I set number of imputation data sets to 10 so it runs faster.
+                 diagnostics=T, print=F, seed=50) # note: I set number of imputation data sets to 10 so it runs faster.
 ```
 
 ```{r r-part5c}
@@ -408,7 +412,7 @@ coef(summary(s.1))
 
 ### SAS
 
-```{r s-part6, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=F}
+```{r s-part6, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
 libname mle "c:\temp";
 %let dir = c:\temp;
 data b; set mle.b; run;
@@ -438,7 +442,7 @@ proc nlmixed data=b qtol=1e-12 gtol=1e-12;
 	title "missing data model estimates";
 	run;
 
-proc transpose data=gams out=gams2 prefix=gam; *this makes the set of gamma horizontal;
+proc transpose data=gams out=mle.gams2 prefix=gam; *this makes the set of gamma horizontal;
 run;
 
 ```
@@ -497,13 +501,14 @@ o.logit$par # estimated parameter from the optim function from the stats package
 
 ### SAS
 
-```{r s-part7, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=F}
+```{r s-part7, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
+
 libname mle "c:\temp";
 %let dir = c:\temp;
 data b; set mle.b; run;
 
 data mle.b2; set b; 
-	if _N_=1 then set gams2; *this puts horisontal gammas on each record;
+	if _N_=1 then set mle.gams2; *this puts horisontal gammas on each record;
 	if pattern=1 then do;
 		p1=1-(
 		1/(1+exp(-(gam1+gam4*white+gam5*cd4+gam6*age)))+
@@ -544,7 +549,7 @@ summary(w)
 
 ### SAS
 
-```{r s-part8, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=F}
+```{r s-part8, engine='sas', engine.path=saspath, engine.opts=sasopts, results='markup', echo=TRUE, message=F, warning=FALSE, eval=T}
 libname mle "c:\temp";
 %let dir = c:\temp;
 data b2; set mle.b2; run;
@@ -575,6 +580,8 @@ summary(s.3)
 coef(summary(s.1)) # coefficients from observed data with no missing
 ```
 
+---
+
 Summary of the regression models for full observed data, complete case analysis and weighted regression.
 
 ```{r r-part8a, results='asis'}
@@ -588,7 +595,10 @@ stargazer(s.1, s.2,  s.3,
 
 ```
 
-Summary of MI parameter estimates
+---
+
+The following estimates are from the regression model using imputed results. 
+
 ```{r-part8b}
 summary(pool.coxph)[,1:2]
 ```
